Fixed problem with display of quantity on Outgoing form.

--- a/ROIS/Forms/Site.Master
+++ b/ROIS/Forms/Site.Master
@@ -360,7 +360,7 @@
     </div>
 
     <!--end::Modal-->
-
+        <script src="../scripts/session.js"></script>
         <script>
             $(document).ready(function () {
                 //$('luser').val()
